Add purchase event handling and memory store
- Introduced new event records for purchase completion, rejection, and tour purchase requests.
- Updated `Core.csproj` to include `NATS.Client` for messaging.
- Implemented `IPurchaseMemoryStore` for in-memory shopping cart item management.
- Enhanced `IPurchaseRepository` with async retrieval of `TourPurchaseToken`.
- Modified `TourPurchaseToken` class to include new properties for status and validation.
- Created `PurchaseSagaHandler` to manage user events and publish related events.
- Updated `PurchaseService` to create purchase tokens and publish requests.
- Adjusted controllers to retrieve user ID from claims instead of hardcoded values.
- Added migration to update `TourPurchaseTokens` table schema.
- Registered `PurchaseMemoryStore` as a singleton in `ToursStartup.cs`.
- Configured NATS connection and event subscription in `Program.cs`.

--- a/Tour/Core/Core.csproj
+++ b/Tour/Core/Core.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="FluentResults" Version="4.0.0" />
+    <PackageReference Include="NATS.Client" Version="1.1.8" />
   </ItemGroup>
 
   <ItemGroup>
